{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerInputOOC",
            "id": "6efcfd0b-71fd-44b2-b0c9-c2d412ace07f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "252afb39-9309-4a53-ae4f-8be8f066f0a4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractTap",
                    "type": "Button",
                    "id": "21b133bd-b913-4631-825d-cdc70953b910",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractHold",
                    "type": "Button",
                    "id": "5a587dd4-c682-46f0-8d4c-d07f23f11cf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "167de49c-3de7-40e9-ad6b-f48d0cadde45",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ba1457da-df74-45e9-a096-0fc0be88ed8c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "eb9a9dac-057a-4001-9be6-65758d773091",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7cf655c0-ae73-4466-a1d5-dc980a5e41f9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f22f9921-3808-4a57-b201-222e1937e6ae",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3dd1ccf5-ec4e-407e-9b20-fe5d02b4ed1e",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "InteractTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5ba38fb-3bf0-4c10-842c-9dd422719dfb",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "InteractHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerInputIC",
            "id": "ecf73aea-c5ff-483d-98ac-4c85f960a1bc",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "7c6a3525-10c2-4676-a9ed-807676ddc3a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab4f47a5-cac5-4e28-a707-61134bff3d9d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}